tests/invalid/foreign_decl_line_number.err_exp4
foreign_decl_line_number.m:24: error: #error Error in foreign decl
foreign_decl_line_number.m:28: error: #error Error in foreign code
foreign_decl_line_number.m:44: error: #error Error in foreign proc
